--- a/ToolBar_APP/res/layout/about_view.xml
+++ b/ToolBar_APP/res/layout/about_view.xml
@@ -38,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="@string/buy_title"
+                android:text="@string/about"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
@@ -60,60 +60,41 @@
                 android:src="@drawable/close" />
         </RelativeLayout>
 
-        <RelativeLayout
-            android:id="@+id/layout2"
-            android:layout_width="fill_parent"
-            android:layout_height="40dip"
-            android:layout_below="@id/layout1"
-            android:layout_marginLeft="4dip"
-            android:layout_marginRight="3dip"
-            android:background="#f3f9fe"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/txt_buy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="11dip"
-                android:text="@string/shop_content1"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
-        </RelativeLayout>
-
         <TextView
-            android:id="@+id/txt_buy_price"
+            android:id="@+id/txt_about_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/layout2"
-            android:layout_marginLeft="15dip"
-            android:layout_marginTop="8dip"
-            android:text="@string/buy_price"
+            android:layout_below="@id/layout1"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dip"
+            android:text="@string/about_content"
             android:textColor="@color/black"
             android:textSize="12sp" />
 
         <TextView
-            android:id="@+id/txt_buy_content"
+            android:id="@+id/txt_about_place"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/txt_buy_price"
-            android:layout_marginLeft="15dip"
-            android:layout_marginRight="15dip"
-            android:layout_marginTop="8dip"
-            android:text="@string/buy_content"
-            android:textColor="@color/black"
+            android:layout_below="@id/txt_about_content"
+            android:layout_marginLeft="190dip"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dip"
+            android:text="@string/about_place"
+            android:textColor="@color/gray"
             android:textSize="10sp" />
 
         <Button
-            android:id="@+id/btn_buy"
+            android:id="@+id/feedback_about"
             android:layout_width="100dip"
             android:layout_height="30dip"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="10dip"
             android:background="@drawable/green_btn_img"
-            android:text="@string/buy_btn"
-            android:textColor="@color/white" />
+            android:text="@string/submit"
+            android:textColor="@color/white"
+            android:textSize="12sp" />
     </RelativeLayout>
 
 </RelativeLayout>
