--- a/ToolBar_APP/res/layout/message_view.xml
+++ b/ToolBar_APP/res/layout/message_view.xml
@@ -38,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="@string/buy_title"
+                android:text="@string/message"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
@@ -61,59 +61,80 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/layout2"
+            android:id="@+id/layout3"
             android:layout_width="fill_parent"
-            android:layout_height="40dip"
-            android:layout_below="@id/layout1"
-            android:layout_marginLeft="4dip"
-            android:layout_marginRight="3dip"
-            android:background="#f3f9fe"
-            android:orientation="horizontal" >
+            android:layout_height="45dip"
+            android:layout_below="@id/layout1" >
 
             <TextView
-                android:id="@+id/txt_buy"
+                android:id="@+id/txt_content1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="11dip"
-                android:text="@string/shop_content1"
+                android:layout_marginLeft="15dip"
+                android:layout_marginTop="2dip"
+                android:text="@string/message_content1"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/txt_content1_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="2dip"
+                android:layout_marginLeft="15dip"
+                android:layout_marginRight="15dip"
+                android:text="@string/message_content1_detail"
+                android:textColor="@color/black"
+                android:textSize="10sp" />
         </RelativeLayout>
 
-        <TextView
-            android:id="@+id/txt_buy_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/layout2"
-            android:layout_marginLeft="15dip"
-            android:layout_marginTop="8dip"
-            android:text="@string/buy_price"
-            android:textColor="@color/black"
-            android:textSize="12sp" />
+        <View
+            android:id="@+id/view1"
+            android:layout_width="fill_parent"
+            android:layout_height="0.5dip"
+            android:layout_below="@id/layout3"
+            android:layout_marginLeft="4dip"
+            android:layout_marginRight="3dip"
+            android:background="@color/gray" />
 
-        <TextView
-            android:id="@+id/txt_buy_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/txt_buy_price"
-            android:layout_marginLeft="15dip"
-            android:layout_marginRight="15dip"
-            android:layout_marginTop="8dip"
-            android:text="@string/buy_content"
-            android:textColor="@color/black"
-            android:textSize="10sp" />
+        <RelativeLayout
+            android:id="@+id/layout4"
+            android:layout_width="fill_parent"
+            android:layout_height="45dip"
+            android:layout_below="@id/view1" >
 
-        <Button
-            android:id="@+id/btn_buy"
-            android:layout_width="100dip"
-            android:layout_height="30dip"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dip"
-            android:background="@drawable/green_btn_img"
-            android:text="@string/buy_btn"
-            android:textColor="@color/white" />
+            <TextView
+                android:id="@+id/txt_content2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dip"
+                android:layout_marginTop="2dip"
+                android:text="@string/message_content2"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/txt_content2_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="2dip"
+                android:layout_marginLeft="15dip"
+                android:layout_marginRight="15dip"
+                android:text="@string/message_content2_detail"
+                android:textColor="@color/black"
+                android:textSize="10sp" />
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/view2"
+            android:layout_width="fill_parent"
+            android:layout_height="0.5dip"
+            android:layout_below="@id/layout4"
+            android:layout_marginLeft="4dip"
+            android:layout_marginRight="3dip"
+            android:background="@color/gray" />
     </RelativeLayout>
 
 </RelativeLayout>
