--- a/ToolBar_APP/res/values/color.xml
+++ b/ToolBar_APP/res/values/color.xml
@@ -7,4 +7,5 @@
     <color name="main_background">#FFCC99</color>
     <color name="start">#85dd2f</color>
     <color name="stop">#FB6E52</color>
+    <color name="water_below">#99CC66</color>
 </resources>
