--- a/ToolBar_APP/res/layout/manager.xml
+++ b/ToolBar_APP/res/layout/manager.xml
@@ -435,7 +435,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="13dip" >
 
-                <com.huawei.toolbar.ui.WaterView
+                <com.huawei.toolbar.uiutil.WaterView
                     android:id="@+id/water"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
