--- a/ToolBar_APP/res/layout/about_view.xml
+++ b/ToolBar_APP/res/layout/about_view.xml
@@ -4,9 +4,9 @@
     android:layout_height="wrap_content" >
 
     <RelativeLayout
-        android:id="@+id/relate"
-        android:layout_width="300dip"
-        android:layout_height="210dip"
+        android:id="@+id/layout_back"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:background="@drawable/white_background" >
 
@@ -70,27 +70,36 @@
             android:layout_marginTop="20dip"
             android:text="@string/about_content"
             android:textColor="@color/black"
-            android:textSize="12sp" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/txt_about_place"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/txt_about_content"
-            android:layout_marginLeft="190dip"
+            android:layout_alignParentRight="true"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dip"
             android:text="@string/about_place"
             android:textColor="@color/gray"
-            android:textSize="10sp" />
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/pull_btn"
+            android:layout_width="25dip"
+            android:layout_height="20dip"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dip"
+            android:background="@drawable/pull" />
 
         <Button
             android:id="@+id/feedback_about"
             android:layout_width="100dip"
             android:layout_height="30dip"
-            android:layout_alignParentBottom="true"
+            android:layout_above="@id/pull_btn"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dip"
+            android:layout_marginBottom="20dip"
             android:background="@drawable/green_btn_img"
             android:text="@string/submit"
             android:textColor="@color/white"
