--- a/ToolBar_APP/res/layout/after_play_view.xml
+++ b/ToolBar_APP/res/layout/after_play_view.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content" >
 
     <RelativeLayout
-        android:id="@+id/white_back"
+        android:id="@+id/layout_back"
         android:layout_width="300dip"
         android:layout_height="200dip"
         android:background="@drawable/white_background" >
@@ -66,13 +66,13 @@
                 android:layout_height="fill_parent"
                 android:layout_below="@id/line" >
 
-                <View
+                <include
                     android:id="@+id/outside_circle"
-                    android:layout_width="80dip"
-                    android:layout_height="80dip"
+                    android:layout_width="70dip"
+                    android:layout_height="70dip"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="30dip"
-                    android:background="@drawable/inside_circle" />
+                    layout="@layout/water_view" />
 
                 <RelativeLayout
                     android:id="@+id/text_line_1"
@@ -184,20 +184,19 @@
                 android:textColor="@color/gray"
                 android:textSize="10sp" />
         </RelativeLayout>
-        
-        <Button 
+
+        <Button
             android:id="@+id/shop_btn"
             android:layout_width="60dip"
             android:layout_height="25dip"
-            android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
             android:layout_marginBottom="15dip"
             android:layout_marginRight="20dip"
             android:background="@drawable/green_btn_img"
             android:text="@string/shop_btn_text"
             android:textColor="@color/white"
             android:textSize="10sp" />
-        
     </RelativeLayout>
 
 </RelativeLayout>
