--- a/ToolBar_APP/res/layout/buy_view.xml
+++ b/ToolBar_APP/res/layout/buy_view.xml
@@ -4,9 +4,9 @@
     android:layout_height="wrap_content" >
 
     <RelativeLayout
-        android:id="@+id/relate"
-        android:layout_width="300dip"
-        android:layout_height="210dip"
+        android:id="@+id/layout_back"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:background="@drawable/white_background" >
 
@@ -78,7 +78,7 @@
                 android:layout_marginLeft="11dip"
                 android:text="@string/shop_content1"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
+                android:textSize="16sp" />
         </RelativeLayout>
 
         <TextView
@@ -90,7 +90,7 @@
             android:layout_marginTop="8dip"
             android:text="@string/buy_price"
             android:textColor="@color/black"
-            android:textSize="12sp" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/txt_buy_content"
@@ -102,15 +102,24 @@
             android:layout_marginTop="8dip"
             android:text="@string/buy_content"
             android:textColor="@color/black"
-            android:textSize="10sp" />
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/pull_btn"
+            android:layout_width="25dip"
+            android:layout_height="20dip"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dip"
+            android:background="@drawable/pull" />
 
         <Button
             android:id="@+id/btn_buy"
             android:layout_width="100dip"
             android:layout_height="30dip"
-            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dip"
+            android:layout_above="@id/pull_btn"
+            android:layout_marginBottom="20dip"
             android:background="@drawable/green_btn_img"
             android:text="@string/buy_btn"
             android:textColor="@color/white" />
