--- a/ToolBar_APP/res/layout/manager.xml
+++ b/ToolBar_APP/res/layout/manager.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:focusable="false" >
 
     <RelativeLayout
         android:id="@+id/layout_back"
@@ -433,25 +434,14 @@
                 android:layout_below="@id/line"
                 android:background="#00000000" />
 
-            <RelativeLayout
+            <include
                 android:id="@+id/circle"
                 android:layout_width="70dip"
                 android:layout_height="70dip"
                 android:layout_below="@id/line"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="13dip" >
-
-                <com.huawei.toolbar.ui.view.WaterView
-                    android:id="@+id/water"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-                <Button
-                    android:id="@+id/water_btn"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/transparent" />
-            </RelativeLayout>
+                android:layout_marginTop="13dip"
+                layout="@layout/water_view" />
         </RelativeLayout>
     </RelativeLayout>
 
