--- a/ToolBar_APP/res/layout/shop_view.xml
+++ b/ToolBar_APP/res/layout/shop_view.xml
@@ -4,9 +4,9 @@
     android:layout_height="wrap_content" >
 
     <RelativeLayout
-        android:id="@+id/layout"
-        android:layout_width="300dip"
-        android:layout_height="260dip"
+        android:id="@+id/layout_back"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:background="@drawable/white_background" >
 
@@ -24,7 +24,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:background="@color/transparent" />
-            
+
             <ImageView
                 android:id="@+id/img_back"
                 android:layout_width="17dip"
@@ -257,6 +257,15 @@
             android:layout_marginLeft="4dip"
             android:layout_marginRight="3dip"
             android:background="@color/gray" />
+
+        <Button
+            android:id="@+id/pull_btn"
+            android:layout_width="25dip"
+            android:layout_height="20dip"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dip"
+            android:background="@drawable/pull" />
     </RelativeLayout>
 
 </RelativeLayout>
