更新几个问题

--- a/ToolBar_APP/res/layout/main.xml
+++ b/ToolBar_APP/res/layout/main.xml
@@ -48,7 +48,7 @@
             android:text="@string/warn_btn" />
     </LinearLayout>
 
-    <LinearLayout
+    <!-- <LinearLayout
         android:id="@+id/http_layout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -95,6 +95,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="package_used" />
-    </LinearLayout>
+    </LinearLayout> -->
 
 </LinearLayout>
