--- a/ToolBar_APP/res/values/color.xml
+++ b/ToolBar_APP/res/values/color.xml
@@ -8,4 +8,5 @@
     <color name="start">#85dd2f</color>
     <color name="stop">#FB6E52</color>
     <color name="water_below">#99CC66</color>
+    <color name="small_window_back">#66000000</color>
 </resources>
